--- a/TKV2025_soubory/sheet014.htm
+++ b/TKV2025_soubory/sheet014.htm
@@ -46,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=12046 style='border-collapse:
- collapse;table-layout:fixed;width:9044pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=12158 style='border-collapse:
+ collapse;table-layout:fixed;width:9128pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=205 style='mso-width-source:userset;mso-width-alt:7497;
@@ -220,8 +220,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=192 style='mso-width-source:userset;mso-width-alt:7021;
+ width:144pt'>
  <col class=xl70 width=91 style='mso-width-source:userset;mso-width-alt:3328;
  width:68pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -375,7 +375,7 @@ else
   <td class=xl70 width=91 style='width:68pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=192 style='width:144pt'></td>
   <td class=xl70 width=91 style='width:68pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -407,7 +407,7 @@ else
   <td class=xl70 width=91 style='width:68pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl182 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl181 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - BRTNICE - 301 DI</td>
   <td class=xl143>&nbsp;</td>
   <td class=xl143>&nbsp;</td>
@@ -1219,7 +1219,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>10,6</td>
+  <td class=xl148 style='border-top:none;border-left:none'>10,5</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1355,7 +1355,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl165 style='border-top:none;border-left:none'>29</td>
+  <td class=xl165 style='border-top:none;border-left:none'>30</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1574,8 +1574,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>25</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10250</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>26</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10900</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1800,8 +1800,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
   [CZE055580]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10200</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>19</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10550</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2158,8 +2158,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Votava Michal [CZE053229]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>21</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>8050</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>22</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8400</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2505,8 +2505,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7800</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>19</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8250</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2657,9 +2657,11 @@ else
   [CZE056087]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Smolík Tomáš [CZE073613]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -2862,9 +2864,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -3064,9 +3068,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Švaříček Jiří [CZE049507]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -3269,9 +3275,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -3471,9 +3479,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Votava Michal [CZE053229]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
+  [CZE055580]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -3526,9 +3537,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Jenšík Ondřej [CZE057906]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Švaříček Jiří [CZE049507]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4200</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3673,9 +3684,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Votava Michal [CZE053229]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -3723,9 +3736,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Švaříček Jiří [CZE049507]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3650</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Smolík Tomáš [CZE073613]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4200</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3870,9 +3883,12 @@ else
   [CZE064231]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bláhová Andrea
+  [CZE085483]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3918,9 +3934,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>14</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Smolík Tomáš [CZE073613]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3450</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Jenšík Ondřej [CZE057906]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>3900</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -4056,9 +4072,12 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Šarounová Lenka
+  [CZE075424]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -5240,9 +5259,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>22</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Koukal Jiří [CZE061258]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1400</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Šarounová Lenka
+  [CZE075424]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1550</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5381,8 +5401,7 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>23</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Navrátil Karel
-  [CZE009044]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Koukal Jiří [CZE061258]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
@@ -5523,8 +5542,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>24</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Bender Martin [CZE045588]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Navrátil Karel
+  [CZE009044]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5663,10 +5683,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>25</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Zavadiak Mykhailo
-  [CZE074834]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1350</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bender Martin [CZE045588]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5801,8 +5820,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>26</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Kutyna Marek [CZE056844]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Zavadiak Mykhailo
+  [CZE074834]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1350</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5936,10 +5956,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>27</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Šarounová Lenka
-  [CZE075424]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>1300</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kutyna Marek [CZE056844]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1350</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -8377,7 +8396,8 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>45</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Tůna Pavel [CZE074832]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bláhová Andrea
+  [CZE085483]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
@@ -8779,10 +8799,12 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl78 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
+  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
+  none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>48</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Tůna Pavel [CZE074832]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -15398,7 +15420,7 @@ else
   <td width=91 style='width:68pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=192 style='width:144pt'></td>
   <td width=91 style='width:68pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
