--- a/TKV2025_soubory/sheet004.htm
+++ b/TKV2025_soubory/sheet004.htm
@@ -86,7 +86,7 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=11 height=58 class=xl188 style='border-right:.5pt solid black;
+  <td colspan=11 height=58 class=xl189 style='border-right:.5pt solid black;
   height:43.5pt'>TOUR KRAJE VYSOČINA 2025 - VÍTĚZOVÉ</td>
   <td class=xl70></td>
  </tr>
@@ -106,11 +106,11 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl202 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl176 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border-top:none;
-  border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext;
-  background:#4F81BD;mso-pattern:black none'>Pořadí</td>
+  font-family:Calibri, sans-serif;border-top:none;border-right:.5pt solid windowtext;
+  border-bottom:none;border-left:.5pt solid windowtext;background:#4F81BD;
+  mso-pattern:black none'>Pořadí</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1</td>
   <td class=xl70></td>
   <td class=xl70></td>
